--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,38 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
+    <ion-buttons slot="start" class="button-container">
+      <ion-button class="custom-button">Home</ion-button>
+      <ion-button class="custom-button">Favoritos</ion-button>
+    </ion-buttons>
+    <ion-searchbar [(ngModel)]="searchTerm" (ionInput)="filterPokemons()" placeholder="Procurar Pokemon" class="searchBarHome"></ion-searchbar>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
+  <div *ngIf="loading" class="spinner-container">
+    <ion-spinner name="crescent"></ion-spinner>
+  </div>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+  <ion-grid *ngIf="!loading">
+    <ion-row>
+      <ion-col size="12" size-md="6" size-lg="4" *ngFor="let pokemon of filteredPokemons">
+        <ion-card (click)="openDetails(pokemon)">
+          <ion-img [src]="getPokemonImage(pokemon)"></ion-img>
+          <ion-card-header>
+            <ion-card-title>#{{ getPokemonId(pokemon) }} {{ pokemon.name | titlecase }}</ion-card-title>
+          </ion-card-header>
+          <ion-card-content>
+            <p>Peso: {{ pokemon.weight }}</p>
+            <p>Altura: {{ pokemon.height }}</p>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
+  <div class="pagination-controls" *ngIf="!loading && totalPages > 1">
+    <ion-button (click)="prevPage()" [disabled]="page <= 1">Página Anterior</ion-button>
+    <span>{{ page }}/{{ totalPages }}</span>
+    <ion-button (click)="nextPage()" [disabled]="page >= totalPages">Próxima Página</ion-button>
   </div>
 </ion-content>
