--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,14 +1,14 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start" class="button-container">
-      <ion-button class="custom-button">Home</ion-button>
-      <ion-button class="custom-button">Favoritos</ion-button>
+      <ion-button class="custom-button" (click)="navigateToHome()">Home</ion-button>
+      <ion-button class="custom-button" (click)="navigateToFavorites()">Favoritos</ion-button>
     </ion-buttons>
     <ion-searchbar [(ngModel)]="searchTerm" (ionInput)="filterPokemons()" placeholder="Procurar Pokemon" class="searchBarHome"></ion-searchbar>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content class="ion-padding">
   <div *ngIf="loading" class="spinner-container">
     <ion-spinner name="crescent"></ion-spinner>
   </div>
@@ -24,6 +24,9 @@
           <ion-card-content>
             <p>Peso: {{ pokemon.weight }}</p>
             <p>Altura: {{ pokemon.height }}</p>
+            <ion-button (click)="toggleFavorite(pokemon); $event.stopPropagation();" color="danger" fill="clear">
+              <ion-icon [name]="isFavorite(pokemon) ? 'heart' : 'heart-outline'"></ion-icon>
+            </ion-button>
           </ion-card-content>
         </ion-card>
       </ion-col>
